--- a/index.html
+++ b/index.html
@@ -10,5 +10,80 @@
 </head>
 <body>
 
+    <div class="card-container">
+        <div class="project-card">
+            <div class="descriptions">
+                <div class="card-title"> Multi-Post Stories Gain+Glory</div>
+                <div class="grid-container">
+                    <div class="item">Ruby on rails</div>
+                    <div class="item">css</div>
+                    <div class="item">JavScript</div>
+                    <div class="item">html</div>
+                </div>
+                <button class="see-project-btn">See Project</button>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="descriptions">
+                <div class="card-title"> Multi-Post Stories Gain+Glory</div>
+                <div class="grid-container">
+                    <div class="item">Ruby on rails</div>
+                    <div class="item">css</div>
+                    <div class="item">JavScript</div>
+                    <div class="item">html</div>
+                </div>
+                <button class="see-project-btn">See Project</button>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="descriptions">
+                <div class="card-title"> Multi-Post Stories Gain+Glory</div>
+                <div class="grid-container">
+                    <div class="item">Ruby on rails</div>
+                    <div class="item">css</div>
+                    <div class="item">JavScript</div>
+                    <div class="item">html</div>
+                </div>
+                <button class="see-project-btn">See Project</button>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="descriptions">
+                <div class="card-title"> Multi-Post Stories Gain+Glory</div>
+                <div class="grid-container">
+                    <div class="item">Ruby on rails</div>
+                    <div class="item">css</div>
+                    <div class="item">JavScript</div>
+                    <div class="item">html</div>
+                </div>
+                <button class="see-project-btn">See Project</button>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="descriptions">
+                <div class="card-title"> Multi-Post Stories Gain+Glory</div>
+                <div class="grid-container">
+                    <div class="item">Ruby on rails</div>
+                    <div class="item">css</div>
+                    <div class="item">JavScript</div>
+                    <div class="item">html</div>
+                </div>
+                <button class="see-project-btn">See Project</button>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="descriptions">
+                <div class="card-title"> Multi-Post Stories Gain+Glory</div>
+                <div class="grid-container">
+                    <div class="item">Ruby on rails</div>
+                    <div class="item">css</div>
+                    <div class="item">JavScript</div>
+                    <div class="item">html</div>
+                </div>
+                <button class="see-project-btn">See Project</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
